[package]
name = "action"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["William Findlay"]
homepage = "https://www.github.com/willfindlay/action"
description = "An actions per minute (APM) counter intended for use as a browser source in OBS."

[dependencies]
anyhow = "1.0.82"
askama = { version = "0.12.1", features = ["with-axum"] }
askama_axum = "0.4.0"
axum = "0.7.5"
dotenv = "0.15.0"
lazy_static = "1.4.0"
rdev = "0.5.3"
serde = { version = "1.0.198", features = ["derive"] }
tokio = { version = "1.37.0", features = ["full"] }
windows-sys = { version = "0.52.0", features = ["Win32_UI_Input_KeyboardAndMouse", "Win32_UI_WindowsAndMessaging"] }

[build-dependencies]
winres = "0.1.12"
